@@ -29,7 +29,7 @@ ruby_vm_t *ruby_vm_new(int argc, char *argv[]);
 int ruby_vm_run(ruby_vm_t *vm, int *signo);
 int ruby_vm_run_node(ruby_vm_t *vm, void *n);
 int ruby_vm_exec_node(ruby_vm_t *vm, void *n);
-int ruby_vm_start(ruby_vm_t *vm);
+int ruby_vm_start(ruby_vm_t *vm, int status, int *signo);
 int ruby_vm_join(ruby_vm_t *vm);
 int ruby_vm_cleanup(ruby_vm_t *vm, int ex, int *signo);
 int ruby_vm_destruct(ruby_vm_t *vm);
